Fix search box is not vertical aligned without nav

--- a/packages/vuepress-theme-book/styles/index.styl
+++ b/packages/vuepress-theme-book/styles/index.styl
@@ -12,7 +12,6 @@ body .navbar .site-name, h1, h2
 
     .search-box
       font-size: 1rem
-      line-height: 1.625
       border-radius: 3px
       margin: 0 0 0 1rem
 
